--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,43 @@ header, .navbar {
 .carousel-indicators .active{
     background-color: #65DAF9;
 }
+
+/*Sobre a Empresa*/
+
+#about-area{
+    background-color: #f9f9f9;
+}
+.main-title {
+    color: #444;
+    margin: 0 0 65px 0;
+    font-size: 40px;
+    text-align: center;
+}
+.main-title::after {
+    content: "";
+    border-top:  2.3px solid #444;
+    position: absolute;
+    top:60px;
+    left: 42%;
+    width: 15% ;
+
+}
+.about-title {
+    font-size: 17px;
+    color: #444;
+    text-transform: uppercase;
+    font-weight: bold;
+
+}
+#about-list {
+    list-style: none;
+    padding-left: 0px;
+}
+#about-list li {
+    line-height: 30px;
+}
+#about-list i {
+    color: #65DAF9;
+    margin-right: 15px;
+
+}
