--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header, .navbar {
     border-top:  2.3px solid #444;
     position: absolute;
     top:60px;
-    left: 42%;
+    left: 42.5%;
     width: 15% ;
 
 }
@@ -175,4 +175,49 @@ header, .navbar {
 /* time */
 .card-body {
     text-align: center;
+}
+/* Trabalhe conosco*/
+
+#apply-area {
+    height: 500px;
+}
+#apply-area .container-fluid, #apply-area .row {
+    height: 100%;
+}
+#apply-area .apply-box {
+ text-align: center;
+ padding: 70px 50px;
+}
+
+#company-img {
+    background-image: url('../img/empresa.jpg');
+    background-size: cover;
+    height: 100%;
+}
+
+#pattern-img h4, #pattern-img p {
+    color:#FFF;
+}
+#pattern-img h4 {
+    margin-top: 8%;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+#pattern-img p {
+    margin-bottom: 20px;
+}
+#apply-btn {
+    display: block;
+    height: auto;
+    width: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    background-color: transparent;
+    border-color: #FFF;
+
+}
+#apply-btn:hover{
+    border-color: #65DAF9;
+    background-color: #65DAF9;
 }
