--- a/css/style.css
+++ b/css/style.css
@@ -94,48 +94,50 @@ header, .navbar {
     background-color: #65DAF9;
 }
 
-/*Sobre a Empresa*/
+/* Sobre a empresa */
 
-#about-area{
-    background-color: #f9f9f9;
-}
-.main-title {
+#about-area {
+    background-color: #F9F9F9;
+  }
+  
+  .main-title {
     color: #444;
     margin: 0 0 65px 0;
     font-size: 40px;
     text-align: center;
-}
-.main-title::after {
+  }
+  
+  .main-title::after {
     content: "";
-    border-top:  2.3px solid #444;
+    border-top: 2px solid #333;
+    width: 15%;
     position: absolute;
-    top:60px;
+    top: 60px;
     left: 42.5%;
-    width: 15% ;
-
-}
-.about-title {
+  }
+  
+  .about-title {
     font-size: 17px;
     color: #444;
     text-transform: uppercase;
     font-weight: bold;
-
-}
-#about-list {
+  }
+  
+  #about-list {
     list-style: none;
-    padding-left: 0px;
-}
-#about-list li {
+    padding-left: 0;
+  }
+  
+  #about-list li {
     line-height: 30px;
-}
-#about-list i {
+  }
+  
+  #about-list i {
     color: #65DAF9;
     margin-right: 15px;
-
-}
-
-/* Serviços */
-
+  }
+  
+  /* Serviços */
 .service-box{
     text-align: center;
     margin-bottom: 50px;
@@ -220,4 +222,33 @@ header, .navbar {
 #apply-btn:hover{
     border-color: #65DAF9;
     background-color: #65DAF9;
+}
+
+/*Portifolio*/
+
+.project-box {
+    margin-bottom: 30px;
+}
+#filter-btn-box {
+    margin-bottom: 50px;
+    text-align: center;
+
+}
+#portifolio-area .filter-btn {
+    color: #444;
+    border: 1px solid #444;
+    background-color: transparent;
+    text-transform: none;
+    margin: 0 15px;
+    min-width: 100px;
+    width: auto;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 20px;
+
+}
+#portifolio-area .filter-btn.active, #portifolio-area .filter-btn:hover {
+    color: #FFF;
+    background-color: #65DAF9;
+    border-color: #65DAF9;
 }
