--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ body {
     text-align: center;
   }
   
-  #portfolio-area .filter-btn {
+  #portifolio-area .filter-btn {
     color: #444;
     border: 1px solid #444;
     background-color: transparent;
@@ -269,7 +269,7 @@ body {
     padding: 0 20px;
   }
   
-  #portfolio-area .filter-btn.active, #portfolio-area .filter-btn:hover {
+  #portifolio-area .filter-btn.active, #portifolio-area .filter-btn:hover {
     color: #FFF;
     border: 1px solid #65DAF9;
     background-color: #65DAF9;
@@ -427,18 +427,42 @@ body {
   #copy-area .container a:hover {
     text-decoration: none;
     color: #3EC1D5;
+   /* responsivo */
+  }
+     @media screen and (max-width: 1024px) {
+    #mainSlider .carousel-caption {
+      top: 20%;
+    }
+    
+    #mainSlider .carousel-caption h2 {
+      font-size: 30px;
+      margin-bottom: 20px;
+    }
+    
+    #mainSlider .carousel-caption p {
+      font-size: 18px;
+      margin-bottom: 50px;
+    }
+    
+    .main-btn {
+      width: 150px;
+      height: 45px;
+      padding: 5px 10px;
+    }
   }
   
-  /* responsive */
   @media(max-width: 768px) {
     
     /* geral */
+ 
     .container {
       padding: 20px 0;
     }
     
     /* slider */
-    #mainSlider .carousel-inner, #mainSlider .carousel-item {
+
+   
+   #mainSlider .carousel-inner, #mainSlider .carousel-item {
       height: auto;
     }
   
@@ -454,7 +478,7 @@ body {
     .carousel-caption {
       left: 10%;
       right: 10%;
-    }
+    }*/
     
     /* about */
     #about-area img {
@@ -510,7 +534,8 @@ body {
   }
   
   
-  @media(max-width: 425px) {
+  
+  @media(max-width: 430px) {
   
     /* slider */
     #mainSlider {
@@ -565,7 +590,7 @@ body {
     }
   
     /* filter */
-    #portfolio-area .filter-btn {
+    #portifolio-area .filter-btn {
       margin-bottom: 20px;
     }
   
