--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,21 @@ body {
     text-align: center;
   }
   
-  .main-title::after {
+  /*.main-title::after {
     content: "";
     border-top: 2px solid #333;
     width: 15%;
     position: absolute;
     top: 60px;
     left: 42.5%;
-  }
+  }*/
+  .main-title::after {
+    content: "";
+    border-top: 2px solid rgb(51, 51, 51);
+    width: 26%;
+    position: absolute;
+    top: 52px;
+    left: 36.5%;}
   
   .about-title {
     font-size: 17px;
@@ -562,7 +569,7 @@ body {
   
     /* about */
     .main-title {
-      font-size: 30px;
+      font-size: 29px;
     }
   
     #about-area img {
